--- a/views/success.html
+++ b/views/success.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Add Product</title>
+    <title>Page Not Found</title>
     <link rel="stylesheet" href="../css/main.css">
 </head>
 
@@ -14,22 +14,12 @@
         <nav class="main-header__nav">
             <ul class="main-header__item-list">
                 <li class="main-header__item"><a href="/">Shop</a></li>
-                <li class="main-header__item"><a class="active" href="/add-product">Add Product</a></li>
+                <li class="main-header__item"><a href="/add-product">Add Product</a></li>
                 <li class="main-header__item"><a href="/contact">Contact Us</a></li>
             </ul>
         </nav>
     </header>
-
-    <main>
-        <form class="product-form" action="/product" method="POST">
-            <div class="form-control">
-                <label for="product">Product:</label>
-                <input type="text" name="product" id="product">
-            </div>
-
-            <button type="submit">Add Product</button>
-        </form>
-    </main>
+    <h1>Contact Form Submitted Successfully!</h1>
 </body>
 
 </html>
