--- a/views/contact.html
+++ b/views/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Add Product</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="../css/main.css">
 </head>
 
@@ -14,20 +14,22 @@
         <nav class="main-header__nav">
             <ul class="main-header__item-list">
                 <li class="main-header__item"><a href="/">Shop</a></li>
-                <li class="main-header__item"><a class="active" href="/add-product">Add Product</a></li>
-                <li class="main-header__item"><a href="/contact">Contact Us</a></li>
+                <li class="main-header__item"><a href="/add-product">Add Product</a></li>
+                <li class="main-header__item"><a class="active" href="/contact">Contact Us</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <form class="product-form" action="/product" method="POST">
+        <form class="contact-form" action="/success" method="POST">
             <div class="form-control">
-                <label for="product">Product:</label>
-                <input type="text" name="product" id="product">
+                <label for="username">User Name:</label>
+                <input type="text" name="username" id="username">
+                <label for="email">Email Id:</label>
+                <input type="email" name="email" id="email">
             </div>
 
-            <button type="submit">Add Product</button>
+            <button type="submit">Contact</button>
         </form>
     </main>
 </body>
