--- a/views/addProduct.html
+++ b/views/addProduct.html
@@ -23,8 +23,8 @@
     <main>
         <form class="product-form" action="/product" method="POST">
             <div class="form-control">
-                <label for="product">Product:</label>
-                <input type="text" name="product" id="product">
+                <label for="title">Product:</label>
+                <input type="text" name="title" id="title">
             </div>
 
             <button type="submit">Add Product</button>
